objects/SBQQ__TemplateContent__c.object
<CustomObject>
    <customHelpPage>SBQQ__TemplateContentHelp</customHelpPage>
    <description>Content for use on quote templates. Same content may be used on multiple templates.</description>
    <fields>
        <fullName>SBQQ__CustomSource__c</fullName>
        <description>URL to a Visualforce that generates content if type is &apos;Custom&apos;.</description>
        <inlineHelpText>URL to a VisualForce page that generates content when type is set to &quot;Custom&quot;</inlineHelpText>
        <label>Custom Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SBQQ__FontFamily__c</fullName>
        <description>Font family to use when rendering this content.</description>
        <inlineHelpText>Font family to use when rendering this content in the generated PDF quote document.</inlineHelpText>
        <label>Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FontSize__c</fullName>
        <description>Font size to use when rendering this content.</description>
        <inlineHelpText>Font size to use when rendering this content on the generated PDF quote document.</inlineHelpText>
        <label>Font Size</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Markup__c</fullName>
        <description>Contains the markup if this content is of type &apos;Markup&apos;</description>
        <inlineHelpText>Contains the markup if this content is of type &quot;Markup&quot;</inlineHelpText>
        <label>Markup</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__RawMarkup__c</fullName>
        <description>Raw HTML markup. Rich Text field (Markup) strips out many HTML tags so this holds the original version as created by the editor.</description>
        <inlineHelpText>Original HTML version of the content in the Markup field.</inlineHelpText>
        <label>Raw Markup</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableStyle__c</fullName>
        <description>Style of the table used for line items. Standard (default) = user-defined fields as columns with line items listed vertically.</description>
        <inlineHelpText>Style of the table used for line items. Standard (default) = user-defined fields as columns with line items listed vertically.</inlineHelpText>
        <label>Table Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Price Dimensions as Columns</fullName>
                </value>
                <value>
                    <fullName>Price Dimensions as Rows with Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TextColor__c</fullName>
        <description>Color (in HEX) applied to text in this content.</description>
        <inlineHelpText>Default color (in HEX) applied to text rendered by this content.</inlineHelpText>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this content.</description>
        <inlineHelpText>Type of this content.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                    <default>true</default>
                    <label>HTML</label>
                </value>
                <value>
                    <fullName>Line Items</fullName>
                </value>
                <value>
                    <fullName>Quote Terms</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Template Content</label>
    <listViews>
        <fullName>Panel1_TemplateContent</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>